otel-foo/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-foo
  namespace: foo
spec:
  type: ClusterIP
  ports:
  - port: 9453
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: otel-foo
