otel-foo/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-foo
  namespace: foo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx-internal
  rules:
  - host: k8s-sit.bviwit.io
    http:
      paths:
      - backend:
          service:
            name: otel-foo
            port:
              number: 9453
        path: /otel-foo(/|$)(.*)
        pathType: Prefix
